--- a/.env
+++ b/.env
@@ -1,18 +1,17 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:ChknYx7UKxKpM1eFq8CC/y2zxFVYXQsva2Ib3KyYbpw=
+APP_KEY=base64:CySiPevz41fr4yYiTnvQU0KH9cXEXxl/132bGl90uBk=
 APP_DEBUG=true
 APP_URL=http://catalogue.test
 
 LOG_CHANNEL=stack
-LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=162.241.230.65
 DB_PORT=3306
-DB_DATABASE=catalogue
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=ceieeeco_cat
+DB_USERNAME=ceieeeco_catroot
+DB_PASSWORD=iYaid0W7tC}M
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -25,11 +24,11 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=smtp.mailtrap.io
+MAIL_HOST=mail.acorla.com
 MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+MAIL_USERNAME=dev@acorla.com
+MAIL_PASSWORD=y~tSj;!sbFoU
+MAIL_ENCRYPTION=ssl
 MAIL_FROM_ADDRESS=null
 MAIL_FROM_NAME="${APP_NAME}"
 
