--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=Catálogo Acorla
 APP_ENV=local
 APP_KEY=base64:CySiPevz41fr4yYiTnvQU0KH9cXEXxl/132bGl90uBk=
 APP_DEBUG=true
