--- a/.env
+++ b/.env
@@ -25,10 +25,10 @@ REDIS_PORT=6379
 
 MAIL_MAILER=smtp
 MAIL_HOST=mail.acorla.com
-MAIL_PORT=2525
+MAIL_PORT=26
 MAIL_USERNAME=dev@acorla.com
 MAIL_PASSWORD=y~tSj;!sbFoU
-MAIL_ENCRYPTION=ssl
+MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS=null
 MAIL_FROM_NAME="${APP_NAME}"
 
